fix: font-size on mobile

--- a/src/_sass/partials/_sections.scss
+++ b/src/_sass/partials/_sections.scss
@@ -247,6 +247,7 @@ ul.list-blocks{
 
     @include media-query($medium-break) {
         grid-column: 2/12;
+        font-size: $base-font-size;
     }
 }
 
@@ -470,6 +471,7 @@ footer {
 
         @include media-query($medium-break) {
             padding: calc($spacing-unit);
+            font-size: $base-font-size;
         }
     }
 }
